--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
     <!-- Local CSS -->
-    <link rel="stylesheet" href="./assets/javascript/script.js">
+    <link rel="stylesheet" href="./assets/CSS/styles.css">
 
     <title>Musician Database</title>
 </head>
