--- a/index.html
+++ b/index.html
@@ -8,15 +8,42 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
     <!-- Local CSS -->
     <link rel="stylesheet" href="./assets/CSS/styles.css">
-
     <title>Musician Database</title>
 </head>
 
 <body>
+    
+    <div class="d-flex align-items-center justify-content-center jumbotron jumbotron-fluid">
+        <div class="text-center">
+            <div class="card text-white mb-3">
 
+                <div id="title-text">
+                    <h1>Musician Database</h1>
+                    <h2>Search by Musician and Location for concert information</h2>
+                </div>
+
+
+                <div class="card-body text-center">
+                    <div class="input-group">
+                        <!-- Artist -->
+                        <div class="input-group-prepend">
+                            <span class="input-group-text" id="inputGroup-sizing-default">Artist</span>
+                        </div>
+                        <input id="artist" type="text" class="form-control" aria-label="Artist" aria-describedby="inputGroup-sizing-default">
+                    
+                        <!-- Location -->
+                        <div class="ml-5 input-group-prepend">
+                            <span class="input-group-text" id="inputGroup-sizing-default">Location</span>
+                        </div>
+                        <input id="location" type="text" class="form-control" aria-label="Location" aria-describedby="inputGroup-sizing-default">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- Local Script -->
-    <script src="./assets/javascript/index.js"></script>
+    <script src="./assets/javascript/script.js"></script>
 </body>
 </html>
