--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,10 +14,20 @@
 </head>
 
 <body>
+    <header>
+        <nav>
+            <a class="primary" href="#Home">Home</a>
+            <a class="primary" href="#Artists">Artists</a>
+            <a class="primary" href="#video">Video</a>
+            <a class="primary" href="#Upcoming Event">Upcoming Event</a>
+            <a class="primary" href="#contact">Contact</a>
+        </nav>
+    </header>
 
     <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- Local Script -->
     <script src="./assets/javascript/index.js"></script>
 </body>
+
 </html>
