--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,7 +13,7 @@
 </head>
 
 <body>
-    
+
     <div class="d-flex align-items-center justify-content-center jumbotron jumbotron-fluid">
         <div class="text-center">
             <div class="card text-white mb-3">
@@ -20,6 +21,7 @@
                 <div id="title-text">
                     <h1>Musician Database</h1>
                     <h2>Search by Musician and Location for concert information</h2>
+                    <button id="submit">Submit</button>
                 </div>
 
 
@@ -30,7 +32,7 @@
                             <span class="input-group-text" id="inputGroup-sizing-default">Artist</span>
                         </div>
                         <input id="artist" type="text" class="form-control" aria-label="Artist" aria-describedby="inputGroup-sizing-default">
-                    
+
                         <!-- Location -->
                         <div class="ml-5 input-group-prepend">
                             <span class="input-group-text" id="inputGroup-sizing-default">Location</span>
@@ -46,4 +48,5 @@
     <!-- Local Script -->
     <script src="./assets/javascript/script.js"></script>
 </body>
+
 </html>
