--- a/index.html
+++ b/index.html
@@ -16,11 +16,9 @@
 <body>
     <header>
         <nav>
-            <a class="primary" href="#Home">Home</a>
-            <a class="primary" href="#Artists">Artists</a>
-            <a class="primary" href="#video">Video</a>
+            <a class="primary" href="#Info">Artists/Venues</a>
             <a class="primary" href="#Upcoming Event">Upcoming Event</a>
-            <a class="primary" href="#contact">Contact</a>
+            <a class="primary" href="#Picture">Contact</a>
         </nav>
     </header>
 
