--- a/index.html
+++ b/index.html
@@ -5,27 +5,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
-    <!-- Local CSS -->
     <link rel="stylesheet" href="./assets/CSS/styles.css">
-
     <title>Musician Database</title>
 </head>
 
 <body>
-    <header>
-        <nav>
-            <a class="primary" href="#Info">Artists/Venues</a>
-            <a class="primary" href="#Upcoming Event">Upcoming Event</a>
-            <a class="primary" href="#Picture">Contact</a>
-        </nav>
-    </header>
-
-    <!-- jQuery -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <!-- Local Script -->
-    <script src="./assets/javascript/index.js"></script>
+    <div class="main">
+        <video autoplay muted>
+            <source src="./Image&Video/production ID_4990243.mp4" type="video/mp4">
+            <source src="./Image&Video/production ID_4990243.ogg" type="video/ogg">
+        Your browser does not support the video tag.
+    </video>
+        <div class="nav bottom-nav">
+            <ul>
+                <li><a href="#./1P.html" class="nav-link">Home</a></li>
+                <li><a href="#info" class="nav-link">About</a></li>
+                <li><a href="#event" class="nav-link">Upcoming Event</a></li>
+                <li><a href="#pic" class="nav-link">Picture</a></li>
+                <li><a href="#" class="nav-link">Contact</a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="container">
+        <div class="box"><strong>About:</strong></div>
+        <div class="box"><strong>Upcoming Event:</strong></div>
+        <div class="box"><strong>Picture:</strong></div>
+        <div class="box"><strong>Contact:</strong> 8180000000</div>
+    </div>
+    <script src="./assets/javascript/script.js"></script>
 </body>
 
 </html>
