Gathered Event Information

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
     </div>
     <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- Moment -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <!-- Local Script -->
     <script src="./assets/javascript/script.js"></script>
 </body>
