--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </video>
         <div class="nav bottom-nav">
             <ul>
-                <li><a href="#./1P.html" class="nav-link">Home</a></li>
+                <li><a href="#Index.html" class="nav-link">Home</a></li>
                 <li><a href="#info" class="nav-link">About</a></li>
                 <li><a href="#event" class="nav-link">Upcoming Event</a></li>
                 <li><a href="#pic" class="nav-link">Picture</a></li>
