--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <source src="./Image&Video/production ID_4990243.ogg" type="video/ogg">
         Your browser does not support the video tag.
     </video>
-        <div class="nav bottom-nav">
+        <div id="mainpage">
             <ul>
                 <li><a href="#./1P.html" class="nav-link">Home</a></li>
                 <li><a href="#info" class="nav-link">About</a></li>
@@ -25,14 +25,13 @@
                 <li><a href="#" class="nav-link">Contact</a></li>
             </ul>
         </div>
-    </div>
-    <div class="container">
-        <div class="box"><strong>About:</strong></div>
-        <div class="box"><strong>Upcoming Event:</strong></div>
-        <div class="box"><strong>Picture:</strong></div>
-        <div class="box"><strong>Contact:</strong> 8180000000</div>
-    </div>
-    <script src="./assets/javascript/script.js"></script>
+        <div class="container">
+            <div class="box"><strong>About:</strong></div>
+            <div class="box"><strong>Upcoming Event:</strong></div>
+            <div class="box"><strong>Picture:</strong></div>
+            <div class="box"><strong>Contact:</strong> 8180000000</div>
+        </div>
+        <script src="./assets/javascript/script.js"></script>
 </body>
 
 </html>
