add more to page

--- a/index.html
+++ b/index.html
@@ -15,23 +15,44 @@
             <source src="./Image&Video/production ID_4990243.mp4" type="video/mp4">
             <source src="./Image&Video/production ID_4990243.ogg" type="video/ogg">
         Your browser does not support the video tag.
-    </video>
-        <div id="mainpage">
-            <ul>
-                <li><a href="#./1P.html" class="nav-link">Home</a></li>
-                <li><a href="#info" class="nav-link">About</a></li>
-                <li><a href="#event" class="nav-link">Upcoming Event</a></li>
-                <li><a href="#pic" class="nav-link">Picture</a></li>
-                <li><a href="#" class="nav-link">Contact</a></li>
-            </ul>
+        </video>
+
+        <nav class="navbar">
+            <div class="brand-title"></div>
+            <a href="#" class="toggle-button">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </a>
+            <nav class="navbar-links">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#event">Upcoming Event</a></li>
+                    <li><a href="#pic">Picture</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </nav>
+
+        <div class="box">
+            <section id="about" class="intro-category">About</section>
         </div>
-        <div class="container">
-            <div class="box"><strong>About:</strong></div>
-            <div class="box"><strong>Upcoming Event:</strong></div>
-            <div class="box"><strong>Picture:</strong></div>
-            <div class="box"><strong>Contact:</strong> 8180000000</div>
+        <div class="box">
+            <section id="event" class="intro-category">Upcoming Event</section>
         </div>
-        <script src="./assets/javascript/script.js"></script>
+        <div class="box">
+            <section id="pic" class="intro-category">Picture</section>
+        </div>
+        <div class="box">
+            <section id="contact" class="intro-category">Conntact</section>
+        </div>
+
+
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="./assets/javascript/script.js"></script>
 
 </html>
