--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         Your browser does not support the video tag.
         </video>
 
-        <nav class="navbar">
+        <nav class="nav bottom-nav">
             <div class="brand-title"></div>
             <a href="#" class="toggle-button">
                 <span class="bar"></span>
@@ -32,34 +32,19 @@
                     <li><a href="#about">About</a></li>
                     <li><a href="#event">Upcoming Event</a></li>
                     <li><a href="#pic">Picture</a></li>
-                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
         </nav>
 
         <div class="box">
-            <section id="about" class="intro-category">About</section>
+            <section id="about" class="intro-category">About:</section>
         </div>
         <div class="box">
-            <section id="event" class="intro-category">Upcoming Event</section>
+            <section id="event" class="main-category">Upcoming Event:</section>
         </div>
         <div class="box">
-            <section id="pic" class="intro-category">Picture</section>
-
-            </video>
-            <div class="nav bottom-nav">
-                <ul>
-                    <li><a href="#Index.html" class="nav-link">Home</a></li>
-                    <li><a href="#info" class="nav-link">About</a></li>
-                    <li><a href="#event" class="nav-link">Upcoming Event</a></li>
-                    <li><a href="#pic" class="nav-link">Picture</a></li>
-                    <li><a href="#" class="nav-link">Contact</a></li>
-                </ul>
-            </div>
-            <div class="box">
-                <section id="contact" class="intro-category">Conntact</section>
-            </div>
-
+            <section id="pic" class="main-category">Picture:</section>
+        </div>
 
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
