--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 </head>
 
 <body>
-
     <div class="d-flex align-items-center justify-content-center jumbotron jumbotron-fluid">
         <div class="text-center">
             <div class="card text-white mb-3">
@@ -43,6 +42,12 @@
             </div>
         </div>
     </div>
+
+
+    <div class="musician-information">
+            
+    </div>
+    
     <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- Moment -->
