Adding searched section

--- a/index.html
+++ b/index.html
@@ -45,7 +45,34 @@
 
 
     <div class="musician-information">
+            <nav class="nav bottom-nav">
+                <div class="brand-title"></div>
+                <a href="#" class="toggle-button">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </a>
+                <nav class="navbar-links">
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#event">Upcoming Event</a></li>
+                        <li><a href="#pic">Picture</a></li>
+                    </ul>
+                </nav>
+            </nav>
             
+            <div class="box">
+                <section id="about" class="intro-category">About:</section>
+            </div>
+            <div class="box">
+                <section id="event" class="main-category">Upcoming Event:</section>
+            </div>
+            <div class="box">
+                <section id="pic" class="main-category">Picture:</section>
+            </div>
     </div>
     
     <!-- jQuery -->
