--- a/index.html
+++ b/index.html
@@ -16,19 +16,18 @@
 </head>
 
 <body>
-    <header>
-        <div class="header">
-            <div id="logo">
-                <a href="file:///Users/jaybarbanel/Desktop/Code/Class%20Content/Project%201%20/Musician-Database/index.html">
-                    <img src="./assets/Images/Screen Shot 2021-11-24 at 2.17.13 PM.png" style="width:75px; height:75px;"></img>
-                </a>
-            </div>
-            <h1>Musician Database</h1>
-        </div>
-    </header>
+    <div class="jumbotron jumbotron-fluid">
 
-    <div class="d-flex align-items-center justify-content-center jumbotron jumbotron-fluid">
-        <div class="text-center">
+        <div class="header align-top col-12">
+        <div id="logo">
+            <a href="./index.html">
+                <img src="./assets/Images/Screen Shot 2021-11-24 at 2.17.13 PM.png" style="width:75px; height:75px;"></img>
+            </a>
+        </div>
+        <h1>Musician Database</h1>
+        </div>
+
+        <div class="search d-flex align-items-center justify-content-center">
             <div class="card text-white mb-3">
 
                 <div id="title-text">
