--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="col-lg-6 col-md-12 card text-white mb-3">
 
                 <div class="title-text text-center">
-                    <h2>Search by musician for upcoming conert information</h2>
+                    <h2>Search by musician for upcoming concert information</h2>
                 </div>
 
                 <div class="card-body text-center">
