fix all changes

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+
     <div class="jumbotron jumbotron-fluid">
 
         <div class="header align-top">
@@ -29,17 +30,17 @@
             <div class="col-lg-6 col-md-12 card text-white mb-3">
 
                 <div class="title-text text-center">
-                    <h2>Search by musician for upcoming concert information</h2>
+                    <h2>Search by musician for upcoming conert information</h2>
                 </div>
 
                 <div class="card-body text-center">
                     <div class="input-group">
                         <!-- Artist -->
-                        <div class="input-group-prepend"> <span class="input-group-text" id="inputGroup-sizing-default">Artist</span> </div>
+                        <div class="input-group-prepend"><span class="input-group-text" id="inputGroup-sizing-default">Artist</span></div>
                         <input id="artist" type="text" class="form-control" aria-label="Artist" aria-describedby="inputGroup-sizing-default">
 
                         <!-- Location -->
-                        <!-- <div class="ml-5 input-group-prepend"> <span class="input-group-text" id="inputGroup-sizing-default">Location</span> </div>
+                        <!-- <div class="ml-5 input-group-prepend"><span class="input-group-text" id="inputGroup-sizing-default">Location</span></div>
                         <input id="location" type="text" class="form-control" aria-label="Location" aria-describedby="inputGroup-sizing-default"> -->
                     </div>
                     <a href="#artist-info"><button id="submit">Search</button></a>
